fix: homepage spacing

--- a/src/routes/(app)/[...index]/index.css
+++ b/src/routes/(app)/[...index]/index.css
@@ -1,3 +1,7 @@
+.app {
+  padding: 0;
+}
+
 .logo {
   padding: 5px 0;
   padding-left: 8px;
@@ -337,7 +341,7 @@ a.button:hover {
   .ui {
     grid-template-rows: auto 240px;
     gap: 0.8em;
-    height: 100vh;
+    height: 100svh;
   }
   .logo span {
     font-size: 2.25em;
